--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -36,3 +36,27 @@ figure.foto-legenda figcaption {
 figure.foto-legenda:hover figcaption {
     opacity: 1;
 }
+
+/*----- Formatação do Menu -----*/
+nav#menu {
+    display: block;
+
+}
+nav#menu ul {
+    list-style: none;
+    text-transform: uppercase;
+    position: absolute;
+    top: -20px;
+    left: 700px;
+}
+nav#menu li{
+    display: inline-block;
+    background-color: #dddddd;
+    padding: 10px; /* espaçamento interno (parte cinza do menu) */
+    margin: 2px; /* espaçamento externo (entre links do menu) */
+}
+ 
+nav#menu h1{
+    display: none;
+}
+nav#menu 
