--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -47,16 +47,27 @@ nav#menu ul {
     text-transform: uppercase;
     position: absolute;
     top: -20px;
-    left: 700px;
+    left: 500px;
 }
-nav#menu li{
+nav#menu li {
     display: inline-block;
     background-color: #dddddd;
     padding: 10px; /* espaçamento interno (parte cinza do menu) */
     margin: 2px; /* espaçamento externo (entre links do menu) */
+    transition: background-color 0.5s;
+}
+nav#menu li:hover {
+    background-color: #606060;
 }
  
 nav#menu h1{
     display: none;
+} 
+nav#menu a {
+    color: #000000;
+    text-decoration: none;
 }
-nav#menu 
+nav#menu a:hover {
+    color: white;
+}
+nav#menu
