--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -136,6 +136,32 @@ table#tabelaspec td {
     padding: 10px;
 }
 
+table#tabelaspec td.ColunaEsquerda {
+    color: white;
+    background-color: #606060;
+    font-weight: bold;
+    text-align: right;
+}
+
+table#tabelaspec td.ColunaDireita {
+    background-color: #cecece;
+    text-align: left;
+}
+
+table#tabelaspec caption {
+    color: #888888;
+    font-size: 13pt;
+    font-weight: bolder;
+}
+
+table#tabelaspec caption span {
+    display: block;
+    float: right;
+    color: rgba(0, 0, 0, 1);
+    font-size: 8pt;
+    margin-top: 10px;
+}
+
 aside#lateral {
     display: block;
     width: 350px;
